--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">
 
           <a href="index.html" class="navbar-brand">
-          <img src="imagens/Spotify.svg" width="142">
+          <img src="imagens/spotify.svg" width="142">
         </a>
 
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
